--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-FsWM is a fullscreen window manager.
+FSWM is a fullscreen window manager.
 
 This software is in the public domain and is provided AS IS, with NO WARRANTY.
 
